## Process this file with automake to create Makefile.in

configdir = @FT_FVWMSCRIPT_DIR@

config_DATA = \
	FvwmApplet-Day FvwmApplet-DayClock FvwmApplet-DigitalClock \
	FvwmApplet-Mixer FvwmScript-IconBrowser FvwmScript-Menus \
	FvwmScript-NoteMessage FvwmScript-Browser FvwmScript-Help \
	FvwmScript-ThemesCenter FvwmScript-ComponentProperties \
	FvwmScript-ColorSelector FvwmScript-ConfigCenter \
	FvwmScript-FontSelector FvwmScript-ImageBrowser

EXTRA_DIST = $(config_DATA)
