## Process this file with automake to create Makefile.in

configdir = @FT_LOCALE_DIR@/en

config_DATA = \
	FvwmScript-ColorSelector.html FvwmScript-ColorSelector.msg \
	FvwmScript-ThemesCenter.html FvwmScript-ThemesCenter.msg \
	FvwmScript-ComponentProperties.msg \
	FvwmScript-GlobalFeel.msg

EXTRA_DIST = $(config_DATA)
