## Process this file with automake to create Makefile.in

configdir = @FT_LOCALE_DIR@/fr

config_DATA = \
	FvwmScript-ColorSelector.txt FvwmScript-ColorSelector.msg \
	FvwmScript-ThemesCenter.txt FvwmScript-ThemesCenter.msg \
	FvwmScript-ThemeOption.msg \
	FvwmScript-ConfigCenter.msg

EXTRA_DIST = $(config_DATA)
